Get logs from pod
